--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ h2 {
   font-style: italic;
 }
 
+ul {
+  background-color: #eeeeee;
+  border: 5px solid purple;
+  padding: 2em;
+}
+
 .job-title {
   color: #999999;
   font-weight: bold;
